added moving for storages
